Ensure equal spacing between components

--- a/app/assets/stylesheets/hera/modules/_attachments.scss
+++ b/app/assets/stylesheets/hera/modules/_attachments.scss
@@ -87,6 +87,10 @@
     display: inline-block;
   }
 
+  .header {
+    margin-top: var(--margin);
+  }
+
   table {
     margin-bottom: 0;
     color: $white;
